[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/MothershipLandingPlatform.gd" type="Script" id=1]
[ext_resource path="res://sprites/tiles/tile_l00_col_permanent.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 70.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 10 )

[node name="MothershipLandingPlatform" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="Sprites"]
position = Vector2( 30, 10 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 50, 10 )
texture = ExtResource( 2 )

[node name="LandingSequenceArea2D" type="Area2D" parent="."]
position = Vector2( 40, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandingSequenceArea2D"]
shape = SubResource( 1 )

[node name="LandingPlatformTweenUp" type="Tween" parent="."]

[node name="LandingPlatformTweenDown" type="Tween" parent="."]

[node name="LandingPlatformArea2D" type="Area2D" parent="."]
position = Vector2( 40, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandingPlatformArea2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="LandingSequenceArea2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="LandingSequenceArea2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="LandingPlatformArea2D" to="." method="_on_LandingPlatformArea2D_body_entered"]
